Bug 508957 - kMyMoney crashes when editing a Investment Transaction with split transaction for fees
Summary: kMyMoney crashes when editing a Investment Transaction with split transaction...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-31 07:26 UTC by Wolfgang Nickl
Modified: 2025-08-31 16:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Nickl 2025-08-31 07:26:54 UTC
SUMMARY
kMyMoney crashes when editing a Investment Transaction with split transaction fro fees

STEPS TO REPRODUCE
1. Insert a Investment Transaction of type Dividend
with a split transaction for fees.
2. Store this transaction.
3. Edit this transaction direct and change date.
kMyMoney crashes when saving the transaction.
alternativley
3. Duplicat the transaction.
4. Edit the copied transaction. change date.
kMyMoney crashes when saving the transaction.

OBSERVED RESULT
kMyMoney crashes when saving the transaction.

EXPECTED RESULT
Change should be possible, otherwise, the program shouldn't crash.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro Linux 25.0.5
KDE Plasma Version: -
KDE Frameworks Version: -
Qt Version: 5.15.17

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2025-08-31 16:38:07 UTC
No need to change the date, simply start editing and pressing the Enter button causes the crash as well.
Comment 2 Thomas Baumgart 2025-08-31 16:50:57 UTC
Git commit d517329cabe9276ed03d7c21e6cf3e01356c05f3 by Thomas Baumgart.
Committed on 31/08/2025 at 16:38.
Pushed by tbaumgart into branch 'master'.

Fix removal of splits
FIXED-IN: 5.2.2

M  +4    -1    kmymoney/views/investtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/d517329cabe9276ed03d7c21e6cf3e01356c05f3
Comment 3 Thomas Baumgart 2025-08-31 16:52:33 UTC
Git commit f25788a22a8cf9a1cdc17cd687ab7151856f3c14 by Thomas Baumgart.
Committed on 31/08/2025 at 16:51.
Pushed by tbaumgart into branch '5.2'.

Fix removal of splits
FIXED-IN: 5.2.2
(cherry picked from commit d517329cabe9276ed03d7c21e6cf3e01356c05f3)

M  +4    -1    kmymoney/views/investtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/f25788a22a8cf9a1cdc17cd687ab7151856f3c14