Fix removal of splits

BUG: 508957
FIXED-IN: 5.2.2